# extension

./: .gitignore  .prettierignore  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  install.json  package.json  pyproject.toml
.github/workflows/: build.yml
coverage/: lcov.info
coverage/lcov-report/: index.html  index.ts.html
git-workflows/: check-release.yml
schema/: plugin.json
src/: index.ts
src/__tests__/: jupyterspot.spec.ts
ui-tests/: package.json
ui-tests/tests/: jupyterspot.spec.ts
